<resources>
    <string name="app_name">Painters</string>
    <string name="saveButton">Save</string>
    <string name="deleteButton">clear</string>
    <string name="switchButton">Switch Photo</string>
    <string name="drawingSaved">The Photo Has Been Saves</string>
    <string name="photoDeleted">The Photo Has Been Deleted</string>
    <string name="saveFailed">Failed to Save The Photo</string>
    <string name="connotAccessStorage">Cannot Access Storage</string>
    <string name="returnButton">Back</string>
    <string name="redButton">Red</string>
    <string name="purpleButton">purple</string>
    <string name="greenButton">Green</string>
    <string name="blueButton">Blue</string>
    <string name="yellowButton">Yellow</string>
    <string name="blackButton">Black</string>
    <string name="eraserButton">Eraser</string>
    <string name="drawing">drawing</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
</resources>