<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/switchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchButton" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/redButton"
            android:textColor="#FF1400" />

        <RadioButton
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/greenButton"
            android:textColor="#02FD07" />

        <RadioButton
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/blueButton"
            android:textColor="#0454F8" />

        <RadioButton
            android:id="@+id/blackButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/blackButton"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/yellowButton"
            android:textColor="#F8F004" />

        <RadioButton
            android:id="@+id/purpleButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/purpleButton"
            android:textColor="#F803E8" />
    </RadioGroup>

    <Switch
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/saveButton"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/eraserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/eraserButton"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/deleteButton"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/returnButton"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>